# sdl_template

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: app.rs  main.rs  window.rs
template/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml
template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
template/src/: app.rs  main.rs  window.rs
