[package]
name = "sdl_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
log = "*"
env_logger = "*"

[dependencies.sdl2]
version = "*"
features = ["bundled"] # static-link doesn't seems to work, wait for fix
